# mmcli

./: .gitmodules  Cargo.toml  README.md
mmcli/: Cargo.toml
mmcli/examples/: emoji.rs  listen.rs  post.rs
mmcli/src/: api.rs  hook.rs  lib.rs
mmcli/tests/: parse.rs
mmcli_raw/: Cargo.toml  README.md
mmcli_raw/.openapi-generator/: FILES
mmcli_raw/docs/: ActionsDialogsOpenDialog.md  AppError.md  Audit.md  AutocompleteSuggestion.md  BleveApi.md  Bot.md  BotsApi.md  BrandApi.md  Channel.md  ChannelData.md  ChannelMember.md  ChannelMemberCountByGroup.md  ChannelModeratedRole.md  ChannelModeratedRoles.md  ChannelModeratedRolesPatch.md  ChannelModeration.md  ChannelModerationPatch.md  ChannelNotifyProps.md  ChannelStats.md  ChannelUnread.md  ChannelUnreadAt.md  ChannelsApi.md  ClusterApi.md  ClusterInfo.md  Command.md  CommandResponse.md  CommandsApi.md  Compliance.md  ComplianceApi.md  Config.md  ConfigAnalyticsSettings.md  ConfigClusterSettings.md  ConfigComplianceSettings.md  ConfigEmailSettings.md  ConfigFileSettings.md  ConfigGitLabSettings.md  ConfigLdapSettings.md  ConfigLocalizationSettings.md  ConfigLogSettings.md  ConfigMetricsSettings.md  (+215 more)
mmcli_raw/src/: de.rs  lib.rs
mmcli_raw/src/apis/: bleve_api.rs  bots_api.rs  brand_api.rs  channels_api.rs  cluster_api.rs  commands_api.rs  compliance_api.rs  configuration.rs  dataretention_api.rs  elasticsearch_api.rs  emoji_api.rs  files_api.rs  integration_actions_api.rs  jobs_api.rs  mod.rs  o_auth_api.rs  open_graph_api.rs  posts_api.rs  preferences_api.rs  reactions_api.rs  roles_api.rs  root_api.rs  saml_api.rs  (+7 more)
(+228 files in other folders)
